update: fix bugs
