# docs/swagger.json
@@ -23,6 +23,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "register and login"
+                ],
                 "summary": "native login",
                 "parameters": [
                     {
@@ -63,49 +66,14 @@
                 }
             }
         },
-        "/newproject": {
-            "post": {
-                "description": "Create user's project(login required)",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Create a new project",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "description": "operating project",
-                        "name": "newproject",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "object"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/Response"
-                        }
-                    }
-                }
-            }
-        },
         "/project": {
             "get": {
                 "description": "Get a project with its id",
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "projects"
                 ],
                 "summary": "Get a project",
                 "parameters": [
@@ -131,8 +99,8 @@
                             "$ref": "#/definitions/db.ProposalInfo"
                         }
                     },
-                    "404": {
-                        "description": "Not Found",
+                    "403": {
+                        "description": "Forbidden",
                         "schema": {
                             "$ref": "#/definitions/Response"
                         }
@@ -146,6 +114,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "projects"
                 ],
                 "summary": "Update one's project",
                 "parameters": [
@@ -169,13 +140,170 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object"
+                            "$ref": "#/definitions/db.ProposalInfo"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/Response"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/Response"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/project/games": {
+            "get": {
+                "description": "Get a game's info by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "projects"
+                ],
+                "summary": "Get a game's info",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "game_id",
+                        "name": "game_id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/project/games/find": {
+            "post": {
+                "description": "Get some games' info with certain circumstances",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "projects"
+                ],
+                "summary": "Get some games' info",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "game circumstances",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/db.Game"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/project/newproject": {
+            "post": {
+                "description": "Create user's project(login required)",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "projects"
+                ],
+                "summary": "Create a new project",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "operating project",
+                        "name": "newproject",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/db.ProposalInfo"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/Response"
                         }
@@ -189,7 +317,10 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Get a templte",
+                "tags": [
+                    "deprecated"
+                ],
+                "summary": "Get a template",
                 "parameters": [
                     {
                         "type": "string",
@@ -213,8 +344,8 @@
                             "$ref": "#/definitions/db.Template"
                         }
                     },
-                    "404": {
-                        "description": "Not Found",
+                    "403": {
+                        "description": "Forbidden",
                         "schema": {
                             "$ref": "#/definitions/Response"
                         }
@@ -227,6 +358,9 @@
                 "description": "create a new account in certain way",
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "register and login"
                 ],
                 "summary": "register account",
                 "parameters": [
@@ -242,7 +376,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object"
+                            "$ref": "#/definitions/db.User"
                         }
                     }
                 ],
@@ -251,6 +385,12 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/db.User"
+                        }
+                    },
+                    "400": {
+                        "description": "param not satisfied",
+                        "schema": {
+                            "$ref": "#/definitions/Response"
                         }
                     }
                 }
@@ -261,6 +401,9 @@
                 "description": "Get User's info with its userID",
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "user"
                 ],
                 "summary": "Get User's info",
                 "parameters": [
@@ -277,12 +420,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/db.User"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/Response"
                         }
                     }
                 }
@@ -306,6 +443,15 @@
                         "name": "Authorization",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "description": "new user profile",
+                        "name": "Profile",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/db.User"
+                        }
                     }
                 ],
                 "responses": {
@@ -331,7 +477,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "dev"
+                    "projects"
                 ],
                 "summary": "Get one's projects",
                 "parameters": [
@@ -414,6 +560,26 @@
                 },
                 "data": {},
                 "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "db.Game": {
+            "type": "object",
+            "properties": {
+                "crowd": {
+                    "type": "string"
+                },
+                "gameid": {
+                    "type": "integer"
+                },
+                "gamename": {
+                    "type": "string"
+                },
+                "time": {
+                    "type": "string"
+                },
+                "venue": {
                     "type": "string"
                 }
             }
@@ -546,11 +712,5 @@
                 }
             }
         }
-    },
-    "tags": [
-        {
-            "description": "under developing",
-            "name": "dev"
-        }
-    ]
+    }
 }
